--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 
 
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=OUTLN
-spring.datasource.password=niuzhuang
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:test
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
