--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.username=outln
 spring.datasource.password=niuzhuang
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/test
+mybatis.configuration.jdbc-type-for-null=null
